some minor code cleanups removed auto-update thread removed constructor from DataTableFrame